--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
     <main>
         <div class="container">
             <div class="card card-1 bg-primary">
-                <img src="./images/icon-sedans.svg" alt="">
+                <img src="images/icon-sedans.svg" alt="">
                 <h1>Sedans</h1>
                 <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
                 <a href="#" class="btn text-primary">learn more</a>
             </div>
             <div class="card card-2 bg-secondary">
-                <img src="./images/icon-suvs.svg" alt="">
+                <img src="images/icon-suvs.svg" alt="">
                 <h1>SUVs</h1>
                 <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
                 <a href="#" class="btn text-secondary">learn more</a>
             </div>
             <div class="card card-3 bg-tertiary">
-                <img src="./images/icon-luxury.svg" alt="">
+                <img src="images/icon-luxury.svg" alt="">
                 <h1>Luxury</h1>
                 <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</p>
                 <a href="#" class="btn text-tertiary">learn more</a>
